adds wood bg, cursive font, updates style

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet"> 
     <title>Audax Society</title>
   </head>
   <body>
